[tool.poetry]
name = "FSAS"
version = "0.1.0"
description = "Yet another implementation of a filesystem file size and search cli app."
authors = ["Daniel Charpentier <daniel.charpentier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"

[tool.poetry.scripts]
fsas = "fsas.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
